# particles

./: 404.html  CMakeLists.txt  README.adoc  README.md  index.html  package-lock.json  package.json  particle_animation_bounce_corrected.ipynb  pyproject.toml  site.yml  sitemap.xml
.github/workflows/: ci.yml
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
feelpp-project/: overview.html  quickstart.html
feelpp-project/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
feelpp-project/examples/: fin.html
particles/: index.html  overview.html  quickstart.html
particles/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
particles/examples/: fin.html  index.html
src/cpp/: CMakeLists.txt  main.cpp  nelder_mead.hpp  simulation.cpp  simulation.hpp  test_nelder_mead.cpp
